# my-taffybar-config

./: my-taffybar.cabal  shell.nix  taffybar.hs
tests/: TaffybarTest.hs
